Refactored quiz-connected tests and added auto-generation of IDs inside QuizServiceInMemoryImpl.